new subsite and images added

--- a/nauka-css.html
+++ b/nauka-css.html
@@ -23,14 +23,13 @@
 
 
         <section>
-            <img src="html-logo.png" alt="logo html"/>
+            <img src="css-logo.png" alt="logo css"/>
         </section>
-
         <section id="notatki">
             <h2>Notatki z WTF: Co ten Frontend</h2>
             <article>
-                <h3>h1</h3>
-                <p>To jest mój ulubiony znacznik
+                <h3>color:</h3>
+                <p>To jest moja ulubiona komenda
                 </p>
             </article>
         </section>
