--- a/nauka-css.html
+++ b/nauka-css.html
@@ -23,7 +23,9 @@
 
 
         <section>
+            <div class="cssLogo">
             <img src="css-logo.png" alt="logo css"/>
+            </div>
         </section>
         <section id="notatki">
             <h2>Notatki z WTF: Co ten Frontend</h2>
