--- a/nauka-html.html
+++ b/nauka-html.html
@@ -23,7 +23,9 @@
 
 
         <section>
+            <div class="htmlLogo">
             <img src="html-logo.png" alt="logo html"/>
+            </div>
         </section>
 
         <section id="notatki">
