background changes and formating sites

--- a/nauka-css.html
+++ b/nauka-css.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <nav>
             <a href="index.html">Strona główna</a>
             <a href="nauka-html.html">Nauka HTML</a>
@@ -21,17 +21,20 @@
     </header>
     <main>
 
+        <header id="top">
+            <h1 class="main-heading">Nauka CSS</h1>
+        </header>
+        <section class="section">
 
-        <section>
             <div class="cssLogo">
-            <img src="css-logo.png" alt="logo css"/>
+                <img src="css-logo.png" alt="logo css" />
             </div>
         </section>
-        <section id="notatki">
-            <h2>Notatki z WTF: Co ten Frontend</h2>
+        <section class="section" id="notatki">
+            <h2 class="secondary-heading">Notatki z WTF: Co ten Frontend</h2>
             <article>
-                <h3>color:</h3>
-                <p>To jest moja ulubiona komenda
+                <h3 class="special-heading">color:</h3>
+                <p>To jest moja ulubiona komenda która zmienia kolor tekstu.
                 </p>
             </article>
         </section>
