--- a/nauka-html.html
+++ b/nauka-html.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <nav>
             <a href="index.html">Strona główna</a>
             <a href="nauka-html.html">Nauka HTML</a>
@@ -21,17 +21,20 @@
     </header>
     <main>
 
+        <header id="top">
+            <h1 class="main-heading">Nauka HTML</h1>
+        </header>
 
-        <section>
+        <section class="section">
             <div class="htmlLogo">
-            <img src="html-logo.png" alt="logo html"/>
+                <img src="html-logo.png" alt="logo html" />
             </div>
         </section>
 
-        <section id="notatki">
-            <h2>Notatki z WTF: Co ten Frontend</h2>
+        <section class="section" id="notatki">
+            <h2 class="secondary-heading">Notatki z WTF: Co ten Frontend</h2>
             <article>
-                <h3>h1</h3>
+                <h3 class="special-heading">h1</h3>
                 <p>To jest mój ulubiony znacznik
                 </p>
             </article>
