--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <nav>
             <a href="index.html">Strona główna</a>
             <a href="nauka-html.html">Nauka HTML</a>
@@ -27,28 +27,28 @@
 
 
         <header id="top">
-            <h1>Michał Głos - Strona domowa</h1>
+            <h1 class="main-heading">Michał Głos - Strona domowa</h1>
         </header>
 
-        <section>
-            <h2>Kim jestem?</h2>
-            <img src="Michal-glos.jpg" alt="Powazny Michal"/>
+        <section class="section">
+            <h2 class="secondary-heading">Kim jestem?</h2>
+            <img src="Michal-glos.jpg" alt="Poważny Michał" />
             <p>Hej na codzień jestem zwykłym człowiekiem, a czasami staje się psychiczny. Kocham moją żonę która jest
                 moim aniołkiem i najlepszym moim człoiwekiem.<a href="https://Onet.pl">Wiadomości codzienne</a><br>
                 Lubię jeść KEBABY i inne fastfoody. Jednak walczę teraz o
                 to aby zrzućić tłuszczyk trzewny bo mam go za dużo<a href="#notatki">Przejdź do notatek</a></p>
         </section>
 
-        <section id="notatki">
-            <h2 class="hotpink-header">Notatki z WTF: Co ten Frontend</h2>
+        <section class="section" id="notatki">
+            <h2 class="secondary-heading">Notatki z WTF: Co ten Frontend</h2>
             <article>
-                <h3>Jak stworzyć prawidłowego HTML-a?</h3>
+                <h3 class="special-heading">Jak stworzyć prawidłowego HTML-a?</h3>
                 <p>Tworzenie zgodnego ze standardami HTML-a to sztuka, którą do perfekcji opanowało niewielu. Jeśli
                     chcesz stać się częścią tej grupy, musisz wykazać się otwartą głową i dużą ilością wolnego czasu...
                 </p>
             </article>
             <article>
-                <h3 class="hotpink-header">Czy nauka szkolenia to prosta sprawa</h3>
+                <h3 class="special-heading">Czy nauka szkolenia to prosta sprawa</h3>
                 <p>Na początku myślałem, że to całe szkolenie to nic trudnego i nauczę się za pierwszym podejściem <b>(o
                         ja
                         głupiutki)</b>. Samo siedzenie i skupianie sie kosztuje masę energii i jest męczące! Na
