--- a/nauka-html.html
+++ b/nauka-html.html
@@ -19,7 +19,7 @@
         </nav>
 
     </header>
-    <main>
+    <main class="main">
 
         <header id="top">
             <h1 class="main-heading">Nauka HTML</h1>
