Added table and normalize

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frontend</title>
+    <link href="normalize.css" rel="stylesheet" type="text/css">
     <link href="style.css" rel="stylesheet" type="text/css">
 
 </head>
@@ -70,7 +71,44 @@
 
             <article class="week-summary">
                 <h3 class="week-summary__title">Prace domowe</h3>
+                <p class="week-summary__description">Poszło mi całkiem spoko :)</p>
                 <p class="week-summary__description week-summary__description--js"></p>
+                <section>
+                    <h4>Lista jakichś znaczników</h4>
+                    <ul class="list">
+                        <li class="list__item">UL</li>
+                        <li class="list__item">OL</li>
+                        <li class="list__item">Section</li>
+                    </ul>
+                </section>
+                <section>
+                    <h4>Kroki do zrobienia dobrego HTML-a</h4>
+                    <ol>
+                        <li>Przeanalizuj treść</li>
+                        <li>Podziel ją na sekcje</li>
+                        <li>Utwórz pierwszą wersję kodu</li>
+                    </ol>
+                </section>
+                <section>
+                    <h4>Testujemy tabelki</h4>
+                    <table>
+                        <caption>Rozpiska WTF</caption>
+                        <thead>
+                            <tr>
+                                <th>Tydzień</th>
+                                <th>Lekcja</th>
+                                <th>Czas trwania</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>I</td>
+                                <td>Ścieżka Kariery</td>
+                                <td>7:12</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </section>
             </article>
         </section>
 
