--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frontend</title>
-    <link href="normalize.css" rel="stylesheet" type="text/css">
-    <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="../css/normalize.css" rel="stylesheet" type="text/css">
+    <link href="../css/style.css" rel="stylesheet" type="text/css">
 
 </head>
 
-<body>
+<body class="page">
     <header>
         <nav class="navigation">
             <a class="navigation__link navigation__link--homepage" href="index.html">Strona główna</a>
@@ -33,7 +33,7 @@
 
         <section class="about">
             <h2 class="about__heading">Kim jestem?</h2>
-            <img class="about__picture" src="Michal-glos.jpg" alt="Poważny Michał" />
+            <img class="about__picture" src="../img/Michal-glos.jpg" alt="Poważny Michał" />
             <p class="about__description">Hej na codzień jestem zwykłym człowiekiem, a czasami staje się psychiczny. Kocham moją żonę która jest
                 moim aniołkiem i najlepszym moim człoiwekiem.<a class="about__link" href="https://Onet.pl">Wiadomości codzienne</a><br>
                 Lubię jeść KEBABY i inne fastfoody. Jednak walczę teraz o
@@ -119,7 +119,7 @@
     <footer class="footer">
         Strona domowa Michała Głosa, wszystkie treści są zmyślone. <a class="footer__link" href="#top">Wróć na górę</a>
     </footer>
-    <script src="main.js"></script>
+    <script src="../js/main.js"></script>
 </body>
 
 </html>
