--- a/nauka-css.html
+++ b/nauka-css.html
@@ -28,7 +28,7 @@
         <section class="section">
 
             <div class="cssLogo">
-                <img src="css-logo.png" alt="logo css" />
+                <img src="../img/css-logo.png" alt="logo css" />
             </div>
         </section>
         <section class="section" id="notatki">
