--- a/nauka-html.html
+++ b/nauka-html.html
@@ -28,7 +28,7 @@
 
         <section class="section">
             <div class="htmlLogo">
-                <img src="html-logo.png" alt="logo html" />
+                <img src="../img/html-logo.png" alt="logo html" />
             </div>
         </section>
 
