--- a/nauka-html.html
+++ b/nauka-html.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frontend2022</title>
-    <link href="normalize.css" rel="stylesheet" type="text/css">
-    <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="../css/normalize.css" rel="stylesheet" type="text/css">
+    <link href="../CSS/style.css" rel="stylesheet" type="text/css">
 
 </head>
 
@@ -44,7 +44,7 @@
 
 
     </main>
-    <footer>
+    <footer class="footer">
         Strona domowa Michała Głosa, wszystkie treści są zmyślone. <a href="#top">Wróć na górę</a>
     </footer>
 </body>
