--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a class="navigation__link navigation__link--homepage" href="index.html">Strona główna</a>
             <a class="navigation__link" href="nauka-html.html">Nauka HTML</a>
             <a class="navigation__link" href="nauka-css.html">Nauka CSS</a>
-
+            <a class="navigation__link" href="playground.html">Nauka inputów</a>
         </nav>
 
     </header>
