Added title change button

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
         <header class="main__header" id="top">
             <h1 class="main__heading main__heading--js">Michał Głos - Strona domowa</h1>
+            <button class="action--js">Zmień nagłówek</button>
         </header>
 
         <section class="about">
