--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
 </head>
 
 <body class="page">
-    <header>
-        <nav class="navigation">
+    <header class="header">
+        <button class="hamburger hamburger--js" aria-label="Otwórz menu">🍔</button>
+        <nav class="navigation navigation--js">
             <a class="navigation__link navigation__link--homepage" href="index.html">Strona główna</a>
             <a class="navigation__link" href="nauka-html.html">Nauka HTML</a>
             <a class="navigation__link" href="nauka-css.html">Nauka CSS</a>
             <a class="navigation__link" href="playground.html">Nauka inputów</a>
         </nav>
+
 
     </header>
 
@@ -43,6 +45,7 @@
 
         <section class="notes" id="notatki">
             <h2 class="notes__heading">Notatki z WTF: Co ten Frontend</h2>
+            <div class="grid">
             <article class="week-summary">
                 <h3 class="week-summary__title">Jak stworzyć prawidłowego HTML-a?</h3>
                 <p class="week-summary__description">Tworzenie zgodnego ze standardami HTML-a to sztuka, którą do
@@ -111,6 +114,7 @@
                     </table>
                 </section>
             </article>
+        </div>
         </section>
 
 
