js and scss modifications

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <p class="about__description">Hej na codzień jestem zwykłym człowiekiem, a czasami staje się psychiczny. Kocham moją żonę która jest
                 moim aniołkiem i najlepszym moim człoiwekiem.<a class="about__link" href="https://Onet.pl">Wiadomości codzienne</a><br>
                 Lubię jeść KEBABY i inne fastfoody. Jednak walczę teraz o
-                to aby zrzućić tłuszczyk trzewny bo mam go za dużo<a class="about__link" href="#notatki">Przejdź do notatek</a></p>
+                to aby zrzućić tłuszczyk trzewny bo mam go za dużo. <a class="about__link" href="#notatki">Przejdź do notatek</a></p>
         </section>
 
         <section class="notes" id="notatki">
