added script js

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body class="page">
+    <script src="./js/main.js" type="module"></script>
     <header class="header">
         <button class="hamburger hamburger--js" aria-label="Otwórz menu">🍔</button>
         <nav class="navigation navigation--js">
@@ -31,6 +32,7 @@
 
         <header class="main__header" id="top">
             <h1 class="main__heading main__heading--js">Michał Głos - Strona domowa</h1>
+
             <button class="action--js">Zmień nagłówek</button>
         </header>
 
